[gd_scene load_steps=8 format=3 uid="uid://btsetkvtbaonl"]

[ext_resource type="Material" uid="uid://ddpwqy41qf85d" path="res://shaders/bg_material.tres" id="1_7jw3y"]
[ext_resource type="Script" path="res://scripts/criar_path/criar_path_reverse.gd" id="1_ogiug"]
[ext_resource type="LabelSettings" uid="uid://cgl76j25jy15c" path="res://themes/instructions_label_settings.tres" id="2_bk4wk"]

[sub_resource type="Gradient" id="Gradient_mfpkk"]
offsets = PackedFloat32Array(0, 0.201299)
colors = PackedColorArray(0, 0, 0, 0.682353, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3uqo2"]
gradient = SubResource("Gradient_mfpkk")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8d5t"]
bg_color = Color(1, 0.805, 0.22, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1wn1"]
bg_color = Color(1, 0, 0.219608, 1)

[node name="CriarPathReverse" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogiug")

[node name="GradientBG" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
texture = SubResource("GradientTexture2D_3uqo2")

[node name="BG" type="ColorRect" parent="."]
unique_name_in_owner = true
material = ExtResource("1_7jw3y")
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
color = Color(0, 0, 0, 0.54902)

[node name="InstructionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1890.0
offset_bottom = 268.0
text = "Inverta seu Ãºltimo caminho para retornar."
label_settings = ExtResource("2_bk4wk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2
offset_left = 195.0
offset_top = 90.0
offset_right = 1695.0
offset_bottom = 890.0
theme_override_constants/separation = 50
alignment = 1

[node name="OriginalPath" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 50
alignment = 1

[node name="PathButtons" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 50
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 873.0
offset_right = 1890.0
offset_bottom = 980.0
theme_override_constants/separation = 50
alignment = 1

[node name="Ok" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_w8d5t")
text = "Ok"

[node name="Reset" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_s1wn1")
text = "Restaurar"

[connection signal="pressed" from="Buttons/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Buttons/Reset" to="." method="_on_reset_pressed"]
